add target blank for anchors

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
             <ul>
                 <li data-name="weblog-demo">
                     <h4>Weblog Demo</h4>
-                    <a href="http://teaualunemsglogdemo.appspot.com">http://teaualunemsglogdemo.appspot.com</a>
+                    <a href="http://teaualunemsglogdemo.appspot.com" target="_blank">http://teaualunemsglogdemo.appspot.com</a>
                     <span class="web">web</span>
                     <span class="java">Java</span>
                     <span class="ntu">NTU</span>
                 </li>
                 <li data-name="compurchasy">
                     <h4>Compurchasy</h4>
-                    <a href="http://compurchasy.herokuapp.com">http://compurchasy.herokuapp.com</a>
+                    <a href="http://compurchasy.herokuapp.com" target="_blank">http://compurchasy.herokuapp.com</a>
                     <span class="web">web</span>
                     <span class="ror">RoR</span>
                     <span class="ntu">NTU</span>
@@ -92,7 +92,7 @@
                 </li>
                 <li data-name="hihidaruma">
                     <h4>Hihidaruma</h4>
-                    <a href="http://hihidaruma.herokuapp.com/hihidarumaApp2/index.html">http://hihidaruma.herokuapp.com/hihidarumaApp2/index.html</a>
+                    <a href="http://hihidaruma.herokuapp.com/hihidarumaApp2/index.html" target="_blank">http://hihidaruma.herokuapp.com/hihidarumaApp2/index.html</a>
                     <span class="web">web</span>
                     <span class="hackday">hackday</span>
                 </li>
@@ -103,7 +103,7 @@
                 </li>
                 <li data-name="uww">
                     <h4>Yahoo! U Want Wall</h4>
-                    <a href="http://tw.uwant.yahoo.com">http://tw.uwant.yahoo.com</a>
+                    <a href="http://tw.uwant.yahoo.com" target="_blank">http://tw.uwant.yahoo.com</a>
                     <span class="web">web</span>
                     <span class="nodejs">Node.js</span>
                 </li>
@@ -114,7 +114,7 @@
                 </li>
                 <li data-name="mapreduce-websocket">
                     <h4>MapReduce with WebSocket</h4>
-                    <a href="http://github.com/teaualune/1012NTUSTCC-PRJ">http://github.com/teaualune/1012NTUSTCC-PRJ</a>
+                    <a href="http://github.com/teaualune/1012NTUSTCC-PRJ" target="_blank">http://github.com/teaualune/1012NTUSTCC-PRJ</a>
                     <span class="web">web</span>
                     <span class="ntu">NTU</span>
                     <span class="nodejs">Node.js</span>
