add new project in work

--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
                     <span class="app">app</span>
                     <span class="y-internal">Y! internal</span>
                 </li>
+                <li data-name="sk-shootduck">
+                    <h4>Shoot Duck - Sprite Kit Sample</h4>
+                    <a href="http://github.com/teaualune/sk-shootduck" target="_blank">http://github.com/teaualune/sk-shootduck</a>
+                    <span class="app">app</span>
+                    <span class="game">game</span>
+                </li>
                 <li data-name="mapreduce-websocket">
                     <h4>MapReduce with WebSocket</h4>
                     <a href="http://github.com/teaualune/1012NTUSTCC-PRJ" target="_blank">http://github.com/teaualune/1012NTUSTCC-PRJ</a>
@@ -127,6 +133,8 @@
                 </li>
                 <li data-name="yaclip">
                     <h4>??? (coming soon)</h4>
+                    <span class="app">app</span>
+                    <span class="web">web</span>
                     <span class="hackday">hackday</span>
                 </li>
             </ul>
