update new project

--- a/index.html
+++ b/index.html
@@ -131,9 +131,8 @@
                     <span class="startup">startup</span>
                     <span class="nodejs">Node.js</span>
                 </li>
-                <li data-name="yaclip">
-                    <h4>??? (coming soon)</h4>
-                    <span class="app">app</span>
+                <li data-name="yamyday">
+                    <h4>YaMyDay!</h4>
                     <span class="web">web</span>
                     <span class="hackday">hackday</span>
                 </li>
