--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
                     <span class="nodejs">Node.js</span>
                 </li>
                 <li data-name="yamyday">
-                    <h4>YaMyDay!</h4>
+                    <h4>Ya!MyDay</h4>
+                    <a href="http://github.com/teaualune/yamyday" target="_blank">http://github.com/teaualune/yamyday</a>
                     <span class="web">web</span>
                     <span class="hackday">hackday</span>
                 </li>
