--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
          --><li><a href="#about">About</a></li><!--
          --><li><a href="#education">Education</a></li><!--
          --><li><a href="#experience">Experience</a></li><!--
+         --><li><a href="#skills">Skills</a></li><!--
          --><li><a href="#work">Work</a></li><!--
          --><li><a href="#contact">Contact</a></li><!--
      --></ul>
@@ -29,15 +30,15 @@
                 <h3>Education</h3>
             </header>
             <ul>
-                <li>
+                <li data-name="ntu-csie">
                     <h4>NTU, CSIE, Master Program</h4>
                     <p>2012 - 2014 (expected)</p>
                 </li>
-                <li>
+                <li data-name="ntu-cloud">
                     <h4>NTU, CSIE, Cloud Computing Program</h4>
                     <p>2011 - 2014 (expected)</p>
                 </li>
-                <li>
+                <li data-name="ntu-math">
                     <h4>NTU, Dept. of Mathematics, Bachelor Program</h4>
                     <p>2008 - 2012</p>
                 </li>
@@ -48,21 +49,64 @@
                 <h3>Experience</h3>
             </header>
             <ul>
-                <li>
+                <li data-name="bitah">
                     <h4>System Architect, BITAH</h4>
                     <p>2013 - Present</p>
                 </li>
-                <li>
+                <li data-name="yahoo-intern">
                     <h4>Summer Internship, Yahoo! Inc.</h4>
                     <p>2012.07 - 2013.06</p>
                 </li>
-                <li>
+                <li data-name="zencher">
                     <h4>Teaching Assistant for iOS Courses, Zencher Ltd.</h4>
                     <p>2012 - Present</p>
                 </li>
-                <li>
+                <li data-name="atomax">
                     <h4>Internship, Atomax Ltd.</h4>
                     <p>2011.07 - 2012.06</p>
+                </li>
+            </ul>
+        </section>
+        <section id="skills">
+            <header>
+                <h3>Skills</h3>
+            </header>
+            <ul>
+                <li data-name="c">
+                    <h4>C</h4>
+                    <span>★★☆</span>
+                </li>
+                <li data-name="matlab">
+                    <h4>MATLAB</h4>
+                    <span>★★★★</span>
+                </li>
+                <li data-name="java">
+                    <h4>Java</h4>
+                    <span>★★★☆</span>
+                </li>
+                <li data-name="cuda">
+                    <h4>CUDA</h4>
+                    <span>★★☆</span>
+                </li>
+                <li data-name="ios">
+                    <h4>iOS Development</h4>
+                    <span>★★★★★</span>
+                </li>
+                <li data-name="f2e">
+                    <h4>Frontend Engineering</h4>
+                    <span>★★★★☆</span>
+                </li>
+                <li data-name="nodejs">
+                    <h4>Node.js</h4>
+                    <span>★★★★☆</span>
+                </li>
+                <li data-name="hadoop">
+                    <h4>Hadoop</h4>
+                    <span>★</span>
+                </li>
+                <li data-name="ooad">
+                    <h4>Object-Oriented Analysis and Design</h4>
+                    <span>★★★</span>
                 </li>
             </ul>
         </section>
