--- a/index.html
+++ b/index.html
@@ -73,39 +73,39 @@
             </header>
             <ul>
                 <li data-name="c">
-                    <h4>C</h4>
+                    C
                     <span>★★☆</span>
                 </li>
                 <li data-name="matlab">
-                    <h4>MATLAB</h4>
+                    MATLAB
                     <span>★★★★</span>
                 </li>
                 <li data-name="java">
-                    <h4>Java</h4>
+                    Java
                     <span>★★★☆</span>
                 </li>
                 <li data-name="cuda">
-                    <h4>CUDA</h4>
+                    CUDA
                     <span>★★☆</span>
                 </li>
                 <li data-name="ios">
-                    <h4>iOS Development</h4>
+                    iOS Development
                     <span>★★★★★</span>
                 </li>
                 <li data-name="f2e">
-                    <h4>Frontend Engineering</h4>
+                    Frontend Engineering
                     <span>★★★★☆</span>
                 </li>
                 <li data-name="nodejs">
-                    <h4>Node.js</h4>
+                    Node.js
                     <span>★★★★☆</span>
                 </li>
                 <li data-name="hadoop">
-                    <h4>Hadoop</h4>
+                    Hadoop
                     <span>★</span>
                 </li>
                 <li data-name="ooad">
-                    <h4>Object-Oriented Analysis and Design</h4>
+                    Object-Oriented Analysis and Design
                     <span>★★★</span>
                 </li>
             </ul>
