refine anchor; add projects

--- a/index.html
+++ b/index.html
@@ -80,9 +80,13 @@
                     MATLAB
                     <span>★★★★</span>
                 </li>
-                <li data-name="java">
-                    Java
-                    <span>★★★☆</span>
+                <li data-name="java-se">
+                    Java SE
+                    <span>★★★★</span>
+                </li>
+                <li data-name="java-ee">
+                    Java EE (Servlet &amp; JSP)
+                    <span>★★★</span>
                 </li>
                 <li data-name="cuda">
                     CUDA
@@ -102,10 +106,10 @@
                 </li>
                 <li data-name="hadoop">
                     Hadoop
-                    <span>★</span>
+                    <span>★☆</span>
                 </li>
                 <li data-name="ooad">
-                    Object-Oriented Analysis and Design
+                    UML &amp; OOAD
                     <span>★★★</span>
                 </li>
             </ul>
@@ -156,6 +160,12 @@
                     <span class="app">app</span>
                     <span class="y-internal">Y! internal</span>
                 </li>
+                <li data-name="jq-shootduck">
+                    <h4>Shoot Duck - jQuery Sample</h4>
+                    <a href="https://github.com/teaualune/shootduck" target="_blank">https://github.com/teaualune/shootduck</a>
+                    <span class="web">web</span>
+                    <span class="game">game</span>
+                </li>
                 <li data-name="sk-shootduck">
                     <h4>Shoot Duck - Sprite Kit Sample</h4>
                     <a href="http://github.com/teaualune/sk-shootduck" target="_blank">http://github.com/teaualune/sk-shootduck</a>
@@ -180,6 +190,17 @@
                     <a href="http://github.com/teaualune/yamyday" target="_blank">http://github.com/teaualune/yamyday</a>
                     <span class="web">web</span>
                     <span class="hackday">hackday</span>
+                </li>
+                <li data-name="fbpjs">
+                    <h4>FBP.js</h4>
+                    <a href="http://github.com/teaualune/fbpjs" target="_blank">http://github.com/teaualune/fbpjs</a>
+                    <span class="web">web</span>
+                    <span class="ntu">NTU</span>
+                </li>
+                <li data-name="thesis">
+                    <h4>??? (coming soon)</h4>
+                    <span class="web">web</span>
+                    <span class="ntu">NTU</span>
                 </li>
             </ul>
         </section>
