--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Teaualune Tseng</title>
+    <title>Lawrence Tseng</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="style.css">
@@ -19,7 +19,7 @@
     <div class="content">
         <section id="about">
             <header>
-                <p>Welcome passing by, this is the personal site of <span>Lawrence Tseng</span> (Teaualune).</p>
+                <p>Welcome passing by, this is the personal site of Lawrence Tseng (Teaualune).</p>
             </header>
             <p>My major work are focused on F2E and iOS development, and I am studying hard to learn architecting for IaaS &amp; PaaS in PASLab, NTU.</p>
             <p>But in fact I am always looking forward to game development.</p>
