--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
                     UML &amp; OOAD
                     <span>★★★</span>
                 </li>
+                <li data-name="android">
+                    Android
+                    <span>★★★</span>
+                </li>
             </ul>
         </section>
         <section id="work">
@@ -135,7 +139,7 @@
                 </li>
                 <li data-name="iphonedoll">
                     <h4>Yahoo! iPhone Doll</h4>
-                    <span class="app">app</span>
+                    <span class="ios">iOS</span>
                     <span class="y-internal">Y! internal</span>
                 </li>
                 <li data-name="hihidaruma">
@@ -146,7 +150,7 @@
                 </li>
                 <li data-name="r-u-lucky-here">
                     <h4>Are You Lucky Here?</h4>
-                    <span class="app">app</span>
+                    <span class="ios">iOS</span>
                     <span class="ntu">NTU</span>
                 </li>
                 <li data-name="uww">
@@ -157,7 +161,7 @@
                 </li>
                 <li data-name="y-clothes-finder">
                     <h4>Yahoo! Clothes Finder</h4>
-                    <span class="app">app</span>
+                    <span class="ios">iOS</span>
                     <span class="y-internal">Y! internal</span>
                 </li>
                 <li data-name="jq-shootduck">
@@ -169,7 +173,7 @@
                 <li data-name="sk-shootduck">
                     <h4>Shoot Duck - Sprite Kit Sample</h4>
                     <a href="http://github.com/teaualune/sk-shootduck" target="_blank">http://github.com/teaualune/sk-shootduck</a>
-                    <span class="app">app</span>
+                    <span class="ios">iOS</span>
                     <span class="game">game</span>
                 </li>
                 <li data-name="mapreduce-websocket">
@@ -201,6 +205,10 @@
                     <h4>??? (coming soon)</h4>
                     <span class="web">web</span>
                     <span class="ntu">NTU</span>
+                </li>
+                <li data-name="compareprice">
+                    <h4>??? (coming soon)</h4>
+                    <span class="android">Android</span>
                 </li>
             </ul>
         </section>
