add favicon; new project

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </li>
                 <li data-name="android">
                     Android
-                    <span>★★★</span>
+                    <span>★★★☆</span>
                 </li>
             </ul>
         </section>
@@ -207,7 +207,8 @@
                     <span class="ntu">NTU</span>
                 </li>
                 <li data-name="compareprice">
-                    <h4>??? (coming soon)</h4>
+                    <h4>比價撿便宜</h4>
+                    <a href="https://play.google.com/store/apps/details?id=com.lbj.compareprice" target="_blank">https://play.google.com/store/apps/details?id=com.lbj.compareprice</a>
                     <span class="android">Android</span>
                 </li>
             </ul>
