--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
             </header>
             <ul>
                 <li data-name="ntu-csie">
-                    <h4>NTU, CSIE, Master Program</h4>
-                    <p>2012 - 2014 (expected)</p>
+                    <h4>NTU, CSIE, Master Degree</h4>
+                    <p>2012 - 2014</p>
                 </li>
                 <li data-name="ntu-cloud">
                     <h4>NTU, CSIE, Cloud Computing Program</h4>
-                    <p>2011 - 2014 (expected)</p>
+                    <p>2011 - 2014, completed 3 credits</p>
                 </li>
                 <li data-name="ntu-math">
-                    <h4>NTU, Dept. of Mathematics, Bachelor Program</h4>
+                    <h4>NTU, Dept. of Mathematics, Bachelor Degree</h4>
                     <p>2008 - 2012</p>
                 </li>
             </ul>
@@ -183,8 +183,8 @@
                     <span class="ntu">NTU</span>
                     <span class="nodejs">Node.js</span>
                 </li>
-                <li data-name="cardcial">
-                    <h4>??? (coming soon)</h4>
+                <li data-name="himelight">
+                    <h4>Himelight</h4>
                     <span class="web">web</span>
                     <span class="startup">startup</span>
                     <span class="nodejs">Node.js</span>
@@ -210,6 +210,11 @@
                     <h4>比價撿便宜</h4>
                     <a href="https://play.google.com/store/apps/details?id=com.lbj.compareprice" target="_blank">https://play.google.com/store/apps/details?id=com.lbj.compareprice</a>
                     <span class="android">Android</span>
+                </li>
+                <li data-name="unieco">
+                    <h4>UniEco website</h4>
+                    <a href="http://www.uniecotech.com" target="_blank">http://www.uniecotech.com</a>
+                    <span class="web">web</span>
                 </li>
             </ul>
         </section>
