--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             </header>
             <ul>
                 <li data-name="bitah">
-                    <h4>System Architect, BITAH</h4>
-                    <p>2013 - Present</p>
+                    <h4>System Architect, BITAH Tech Co., Ltd.</h4>
+                    <p>2014 - Present</p>
                 </li>
                 <li data-name="yahoo-intern">
                     <h4>Summer Internship, Yahoo! Inc.</h4>
@@ -94,7 +94,11 @@
                 </li>
                 <li data-name="ios">
                     iOS Development
-                    <span>★★★★★</span>
+                    <span>★★★★</span>
+                </li>
+                <li data-name="js">
+                    JavaScript
+                    <span>★★★★☆</span>
                 </li>
                 <li data-name="f2e">
                     Frontend Engineering
@@ -123,46 +127,40 @@
                 <h3>Work</h3>
             </header>
             <ul>
-                <li data-name="weblog-demo">
-                    <h4>Weblog Demo</h4>
-                    <a href="http://teaualunemsglogdemo.appspot.com" target="_blank">http://teaualunemsglogdemo.appspot.com</a>
-                    <span class="web">web</span>
-                    <span class="java">Java</span>
-                    <span class="ntu">NTU</span>
-                </li>
-                <li data-name="compurchasy">
-                    <h4>Compurchasy</h4>
-                    <a href="http://compurchasy.herokuapp.com" target="_blank">http://compurchasy.herokuapp.com</a>
-                    <span class="web">web</span>
-                    <span class="ror">RoR</span>
-                    <span class="ntu">NTU</span>
-                </li>
-                <li data-name="iphonedoll">
-                    <h4>Yahoo! iPhone Doll</h4>
-                    <span class="ios">iOS</span>
-                    <span class="y-internal">Y! internal</span>
-                </li>
-                <li data-name="hihidaruma">
-                    <h4>Hihidaruma</h4>
-                    <a href="http://hihidaruma.herokuapp.com/hihidarumaApp2/index.html" target="_blank">http://hihidaruma.herokuapp.com/hihidarumaApp2/index.html</a>
-                    <span class="web">web</span>
-                    <span class="hackday">hackday</span>
-                </li>
-                <li data-name="r-u-lucky-here">
-                    <h4>Are You Lucky Here?</h4>
-                    <span class="ios">iOS</span>
-                    <span class="ntu">NTU</span>
-                </li>
                 <li data-name="uww">
                     <h4>Yahoo! U Want Wall</h4>
                     <a href="http://tw.uwant.yahoo.com" target="_blank">http://tw.uwant.yahoo.com</a>
                     <span class="web">web</span>
                     <span class="nodejs">Node.js</span>
                 </li>
-                <li data-name="y-clothes-finder">
-                    <h4>Yahoo! Clothes Finder</h4>
-                    <span class="ios">iOS</span>
-                    <span class="y-internal">Y! internal</span>
+                <li data-name="fbpjs">
+                    <h4>FBP.js</h4>
+                    <a href="http://github.com/teaualune/fbpjs" target="_blank">http://github.com/teaualune/fbpjs</a>
+                    <span class="web">web</span>
+                    <span class="ntu">NTU</span>
+                </li>
+                <li data-name="thesis">
+                    <h4>Migratom.js: A JavaScript Migration Framework for Distributed Web Computing and Mobile Devices</h4>
+                    <span class="web">web</span>
+                    <span class="ntu">NTU</span>
+                </li>
+                <li data-name="compareprice">
+                    <h4>比價撿便宜</h4>
+                    <a href="https://play.google.com/store/apps/details?id=com.lbj.compareprice" target="_blank">https://play.google.com/store/apps/details?id=com.lbj.compareprice</a>
+                    <span class="android">Android</span>
+                </li>
+                <li data-name="himelight">
+                    <h4>Himelight</h4>
+                    <a href="http://www.himelight.com" target="_blank">http://www.himelight.com</a>
+                    <span class="web">web</span>
+                    <span class="startup">startup</span>
+                    <span class="nodejs">Node.js</span>
+                </li>
+                <li data-name="yamyday">
+                    <h4>Ya!MyDay</h4>
+                    <a href="http://github.com/teaualune/yamyday" target="_blank">http://github.com/teaualune/yamyday</a>
+                    <span class="web">web</span>
+                    <span class="hackday">hackday</span>
                 </li>
                 <li data-name="jq-shootduck">
                     <h4>Shoot Duck - jQuery Sample</h4>
@@ -183,38 +181,45 @@
                     <span class="ntu">NTU</span>
                     <span class="nodejs">Node.js</span>
                 </li>
-                <li data-name="himelight">
-                    <h4>Himelight</h4>
-                    <span class="web">web</span>
-                    <span class="startup">startup</span>
-                    <span class="nodejs">Node.js</span>
-                </li>
-                <li data-name="yamyday">
-                    <h4>Ya!MyDay</h4>
-                    <a href="http://github.com/teaualune/yamyday" target="_blank">http://github.com/teaualune/yamyday</a>
-                    <span class="web">web</span>
-                    <span class="hackday">hackday</span>
-                </li>
-                <li data-name="fbpjs">
-                    <h4>FBP.js</h4>
-                    <a href="http://github.com/teaualune/fbpjs" target="_blank">http://github.com/teaualune/fbpjs</a>
-                    <span class="web">web</span>
-                    <span class="ntu">NTU</span>
-                </li>
-                <li data-name="thesis">
-                    <h4>??? (coming soon)</h4>
-                    <span class="web">web</span>
-                    <span class="ntu">NTU</span>
-                </li>
-                <li data-name="compareprice">
-                    <h4>比價撿便宜</h4>
-                    <a href="https://play.google.com/store/apps/details?id=com.lbj.compareprice" target="_blank">https://play.google.com/store/apps/details?id=com.lbj.compareprice</a>
-                    <span class="android">Android</span>
-                </li>
                 <li data-name="unieco">
                     <h4>UniEco website</h4>
                     <a href="http://www.uniecotech.com" target="_blank">http://www.uniecotech.com</a>
                     <span class="web">web</span>
+                </li>
+                <li data-name="weblog-demo">
+                    <h4>Weblog Demo</h4>
+                    <a href="http://teaualunemsglogdemo.appspot.com" target="_blank">http://teaualunemsglogdemo.appspot.com</a>
+                    <span class="web">web</span>
+                    <span class="java">Java</span>
+                    <span class="ntu">NTU</span>
+                </li>
+                <li data-name="compurchasy">
+                    <h4>Compurchasy</h4>
+                    <a href="http://compurchasy.herokuapp.com" target="_blank">http://compurchasy.herokuapp.com</a>
+                    <span class="web">web</span>
+                    <span class="ror">RoR</span>
+                    <span class="ntu">NTU</span>
+                </li>
+                <li data-name="hihidaruma">
+                    <h4>Hihidaruma</h4>
+                    <a href="http://hihidaruma.herokuapp.com/hihidarumaApp2/index.html" target="_blank">http://hihidaruma.herokuapp.com/hihidarumaApp2/index.html</a>
+                    <span class="web">web</span>
+                    <span class="hackday">hackday</span>
+                </li>
+                <li data-name="iphonedoll">
+                    <h4>Yahoo! iPhone Doll</h4>
+                    <span class="ios">iOS</span>
+                    <span class="y-internal">Y! internal</span>
+                </li>
+                <li data-name="y-clothes-finder">
+                    <h4>Yahoo! Clothes Finder</h4>
+                    <span class="ios">iOS</span>
+                    <span class="y-internal">Y! internal</span>
+                </li>
+                <li data-name="r-u-lucky-here">
+                    <h4>Are You Lucky Here?</h4>
+                    <span class="ios">iOS</span>
+                    <span class="ntu">NTU</span>
                 </li>
             </ul>
         </section>
