update paper URL

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                 </li>
                 <li data-name="thesis">
                     <h4>Migratom.js: A JavaScript Migration Framework for Distributed Web Computing and Mobile Devices</h4>
+                    <a href="http://dl.acm.org/citation.cfm?id=2695987" target="_blank">http://dl.acm.org/citation.cfm?id=2695987</a>
                     <span class="web">web</span>
                     <span class="ntu">NTU</span>
                 </li>
