--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Lawrence Tseng</title>
+    <title>Tai-Lun Tseng</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="style.css">
@@ -19,9 +19,9 @@
     <div class="content">
         <section id="about">
             <header>
-                <p>Welcome passing by, this is the personal site of Lawrence Tseng (Teaualune).</p>
+                <p>Welcome passing by, this is the personal site of Tai-Lun Tseng (Lawrence).</p>
             </header>
-            <p>My major work are focused on F2E and iOS development, and I am studying hard to learn architecting for IaaS &amp; PaaS in PASLab, NTU.</p>
+            <p>My major work are focused on F2E and iOS development, and I am studying hard to learn architecting for IaaS &amp; PaaS in PASLab, NTU. I am also one of the cofounders of Himelight.</p>
             <p>But in fact I am always looking forward to game development.</p>
             <p>Also, I'm crazy in building plastic models categorized in military, Gunpla, etc.</p>
         </section>
@@ -50,16 +50,16 @@
             </header>
             <ul>
                 <li data-name="bitah">
-                    <h4>System Architect, BITAH Tech Co., Ltd.</h4>
+                    <h4>Chief Technology Officer, BITAH Tech Co., Ltd.</h4>
                     <p>2014 - Present</p>
+                </li>
+                <li data-name="zencher">
+                    <h4>Project Consultant, Zencher Ltd.</h4>
+                    <p>2015 - Present</p>
                 </li>
                 <li data-name="yahoo-intern">
                     <h4>Summer Internship, Yahoo! Inc.</h4>
                     <p>2012.07 - 2013.06</p>
-                </li>
-                <li data-name="zencher">
-                    <h4>Teaching Assistant for iOS Courses, Zencher Ltd.</h4>
-                    <p>2012 - Present</p>
                 </li>
                 <li data-name="atomax">
                     <h4>Internship, Atomax Ltd.</h4>
@@ -127,6 +127,25 @@
                 <h3>Work</h3>
             </header>
             <ul>
+                <li data-name="thesis">
+                    <h4>Migratom.js: A JavaScript Migration Framework for Distributed Web Computing and Mobile Devices</h4>
+                    <a href="http://dl.acm.org/citation.cfm?id=2695987" target="_blank">http://dl.acm.org/citation.cfm?id=2695987</a>
+                    <span class="web">web</span>
+                    <span class="ntu">NTU</span>
+                </li>
+                <li data-name="himelight">
+                    <h4>Himelight</h4>
+                    <a href="http://www.himelight.com" target="_blank">http://www.himelight.com</a>
+                    <span class="web">web</span>
+                    <span class="startup">startup</span>
+                    <span class="nodejs">Node.js</span>
+                </li>
+                <li data-name="display-name">
+                    <h4>displayName</h4>
+                    <a href="http://github.com/teaualune/displayName" target="_blank">http://github.com/teaualune/displayName</a>
+                    <span class="web">web</span>
+                    <span class="nodejs">Node.js</span>
+                </li>
                 <li data-name="uww">
                     <h4>Yahoo! U Want Wall</h4>
                     <a href="http://tw.uwant.yahoo.com" target="_blank">http://tw.uwant.yahoo.com</a>
@@ -139,23 +158,10 @@
                     <span class="web">web</span>
                     <span class="ntu">NTU</span>
                 </li>
-                <li data-name="thesis">
-                    <h4>Migratom.js: A JavaScript Migration Framework for Distributed Web Computing and Mobile Devices</h4>
-                    <a href="http://dl.acm.org/citation.cfm?id=2695987" target="_blank">http://dl.acm.org/citation.cfm?id=2695987</a>
-                    <span class="web">web</span>
-                    <span class="ntu">NTU</span>
-                </li>
                 <li data-name="compareprice">
                     <h4>比價撿便宜</h4>
                     <a href="https://play.google.com/store/apps/details?id=com.lbj.compareprice" target="_blank">https://play.google.com/store/apps/details?id=com.lbj.compareprice</a>
                     <span class="android">Android</span>
-                </li>
-                <li data-name="himelight">
-                    <h4>Himelight</h4>
-                    <a href="http://www.himelight.com" target="_blank">http://www.himelight.com</a>
-                    <span class="web">web</span>
-                    <span class="startup">startup</span>
-                    <span class="nodejs">Node.js</span>
                 </li>
                 <li data-name="yamyday">
                     <h4>Ya!MyDay</h4>
@@ -231,7 +237,6 @@
             <ul>
                 <li><a href="mailto:teaualune@gmail.com">Email</a></li>
                 <li><a href="http://github.com/teaualune" target="_blank">Github</a></li>
-                <li><a href="http://flip.it/mHol0" target="_blank">Flipboard</a></li>
             </ul>
         </section>
     </div>
