--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
          --><li><a href="#education">Education</a></li><!--
          --><li><a href="#experience">Experience</a></li><!--
          --><li><a href="#skills">Skills</a></li><!--
-         --><li><a href="#work">Work</a></li><!--
+         --><li><a href="#works">Works</a></li><!--
+         --><li><a href="#talks">Talks</a></li><!--
          --><li><a href="#contact">Contact</a></li><!--
      --></ul>
     </div>
@@ -120,11 +121,15 @@
                     Android
                     <span>★★★☆</span>
                 </li>
+                <li data-name="latex">
+                    LaTeX
+                    <span>★★★</span>
+                </li>
             </ul>
         </section>
-        <section id="work">
+        <section id="works">
             <header>
-                <h3>Work</h3>
+                <h3>Works</h3>
             </header>
             <ul>
                 <li data-name="thesis">
@@ -135,26 +140,26 @@
                 </li>
                 <li data-name="himelight">
                     <h4>Himelight</h4>
-                    <a href="http://www.himelight.com" target="_blank">http://www.himelight.com</a>
+                    <a href="https://www.himelight.com" target="_blank">https://www.himelight.com</a>
                     <span class="web">web</span>
                     <span class="startup">startup</span>
                     <span class="nodejs">Node.js</span>
                 </li>
                 <li data-name="display-name">
                     <h4>displayName</h4>
-                    <a href="http://github.com/teaualune/displayName" target="_blank">http://github.com/teaualune/displayName</a>
+                    <a href="https://github.com/teaualune/displayName" target="_blank">https://github.com/teaualune/displayName</a>
                     <span class="web">web</span>
                     <span class="nodejs">Node.js</span>
                 </li>
                 <li data-name="uww">
                     <h4>Yahoo! U Want Wall</h4>
-                    <a href="http://tw.uwant.yahoo.com" target="_blank">http://tw.uwant.yahoo.com</a>
+                    <a href="https://tw.uwant.yahoo.com" target="_blank">https://tw.uwant.yahoo.com</a>
                     <span class="web">web</span>
                     <span class="nodejs">Node.js</span>
                 </li>
                 <li data-name="fbpjs">
                     <h4>FBP.js</h4>
-                    <a href="http://github.com/teaualune/fbpjs" target="_blank">http://github.com/teaualune/fbpjs</a>
+                    <a href="https://github.com/teaualune/fbpjs" target="_blank">https://github.com/teaualune/fbpjs</a>
                     <span class="web">web</span>
                     <span class="ntu">NTU</span>
                 </li>
@@ -163,9 +168,14 @@
                     <a href="https://play.google.com/store/apps/details?id=com.lbj.compareprice" target="_blank">https://play.google.com/store/apps/details?id=com.lbj.compareprice</a>
                     <span class="android">Android</span>
                 </li>
+                <li data-name="ifindbook">
+                    <h4>i找書</h4>
+                    <a href="https://play.google.com/store/apps/details?id=tw.edu.ncl.ifindbook" target="_blank">https://play.google.com/store/apps/details?id=tw.edu.ncl.ifindbook</a>
+                    <span class="android">Android</span>
+                </li>
                 <li data-name="yamyday">
                     <h4>Ya!MyDay</h4>
-                    <a href="http://github.com/teaualune/yamyday" target="_blank">http://github.com/teaualune/yamyday</a>
+                    <a href="https://github.com/teaualune/yamyday" target="_blank">https://github.com/teaualune/yamyday</a>
                     <span class="web">web</span>
                     <span class="hackday">hackday</span>
                 </li>
@@ -177,13 +187,13 @@
                 </li>
                 <li data-name="sk-shootduck">
                     <h4>Shoot Duck - Sprite Kit Sample</h4>
-                    <a href="http://github.com/teaualune/sk-shootduck" target="_blank">http://github.com/teaualune/sk-shootduck</a>
+                    <a href="https://github.com/teaualune/sk-shootduck" target="_blank">https://github.com/teaualune/sk-shootduck</a>
                     <span class="ios">iOS</span>
                     <span class="game">game</span>
                 </li>
                 <li data-name="mapreduce-websocket">
                     <h4>MapReduce with WebSocket</h4>
-                    <a href="http://github.com/teaualune/1012NTUSTCC-PRJ" target="_blank">http://github.com/teaualune/1012NTUSTCC-PRJ</a>
+                    <a href="https://github.com/teaualune/1012NTUSTCC-PRJ" target="_blank">https://github.com/teaualune/1012NTUSTCC-PRJ</a>
                     <span class="web">web</span>
                     <span class="ntu">NTU</span>
                     <span class="nodejs">Node.js</span>
@@ -230,13 +240,40 @@
                 </li>
             </ul>
         </section>
+        <section id="talks">
+            <header><h3>Talks</h3></header>
+            <ul>
+                <li data-name="gittalk">
+                    <h4>Introduction to Git</h4>
+                    <p>2016.03</p>
+                    <a href="https://github.com/teaualune/gittalk" target="_blank">https://github.com/teaualune/gittalk</a>
+                </li>
+                <li data-name="webtalk">
+                    <h4>Various Topics in Web Development</h4>
+                    <p>2016.03</p>
+                    <a href="https://github.com/teaualune/webtalk" target="_blank">https://github.com/teaualune/webtalk</a>
+                </li>
+                <li data-name="spritekit-talk">
+                    <h4>Introduction to Sprite Kit</h4>
+                    <p>2013.07</p>
+                    <a href="https://www.slideshare.net/TaiLunTseng/introduction-to-sprite-kit" target="_blank">https://www.slideshare.net/TaiLunTseng/introduction-to-sprite-kit</a>
+                </li>
+                <li data-name="latex-tutorial">
+                    <h4>LaTeX Tutorial</h4>
+                    <p>2015.01</p>
+                    <a href="https://www.slideshare.net/TaiLunTseng/latex-tutorial-61245274">https://www.slideshare.net/TaiLunTseng/latex-tutorial-61245274</a>
+                </li>
+            </ul>
+        </section>
         <section id="contact">
             <header>
                 <h3>Contact</h3>
             </header>
             <ul>
                 <li><a href="mailto:teaualune@gmail.com">Email</a></li>
-                <li><a href="http://github.com/teaualune" target="_blank">Github</a></li>
+                <li><a href="https://github.com/teaualune" target="_blank">Github</a></li>
+                <li><a href="https://www.facebook.com/teaualune" target="_blank">Facebook</a></li>
+                <li><a href="https://tw.linkedin.com/in/tai-lun-tseng-98b11224" target="_blank">LinkedIn</a></li>
             </ul>
         </section>
     </div>
